# ComfyUI-Qlip

./: CLAUDE.md  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  requirements_blackwell.txt  timer_nodes.py  utils.py
nodes/: __init__.py  engine_loader.py  timer.py
scripts/: download_flux_klein_models.sh  download_ltx_2_3_models.sh  download_ltx_2_models.sh  download_qwen_image_edit.sh  download_wan_i2v_models.sh  download_z_image_turbo_models.sh
skills/qlip-model-compiler/: SKILL.md
utils/: __init__.py  helpers.py
workflows/: Flux-Klein.json  flux-klein.json  flux_klein_edit.json  qwen-image-edit.json  video_ltx2_i2v_distilled-3.json  video_ltx2_i2v_distilled.json  video_ltx2_i2v_distilled_qlip.json  video_ltx_2_3_t2v-qlip.json  video_wan2_2_14B_i2v-qlip.json  video_wan2_2_14b_i2v_5090-qlip.json  z-image-turbo-5090.json  z-image-turbo.json
